# the-machine-learns

./: .gitignore  CLAUDE_1.md  README.md  SYLLABUS.md  jupytext.toml  pyproject.toml
data/: .gitignore  get_data.py
notebooks/: 00-python-for-r-users.ipynb  00-python-for-r-users.py  01-statistical-learning-frame.ipynb  01-statistical-learning-frame.py
solutions/: 00-solutions.ipynb  00-solutions.py  01-solutions.ipynb  01-solutions.py
src/: data.py  tunnel_mpl.py
